--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.29.3",
     "@supabase/ui": "^0.36.2",
+    "date-fns": "^2.28.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
